# adjective-adjective-animal

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  build.rs
.ci/: build.sh
cli/: Cargo.toml  README.md
cli/src/: main.rs
src/: lib.rs
