[package]
name = "adjective_adjective_animal"
version = "0.1.0"
authors = ["Travis Burtrum <admin.github@moparisthebest.com>", "Fletcher Nichol <fnichol@nichol.ca>"]
license = "MIT"
readme = "README.md"
documentation = "https://github.com/moparisthebest/adjective-adjective-animal"
repository = "https://github.com/moparisthebest/adjective-adjective-animal.git"
homepage = "https://github.com/moparisthebest/adjective-adjective-animal"
keywords = ["name", "random", "adjective", "animal"]
description = """
A library to generate suitably random and reasonably unique human readable (and fairly adorable) ids,
ala GiphyCat
"""
exclude = ["cli"]
build = "build.rs"

[lib]
name = "adjective_adjective_animal"
path = "src/lib.rs"

[dependencies]
rand = "0.5.4"
